# faio

./: CMakeLists.txt  README.md  vcpkg.json
benchmark/: CMakeLists.txt  README.md  coroutine_stress.cpp
benchmark/http/: beast_http_benchmark.cpp  faio_http_benchmark.cpp
benchmark/http/gin-http/: go.mod  main.go
benchmark/result/http/: summary.csv  summary.md
benchmark/result/tcp/: summary.csv  summary.md
benchmark/tcp/: asio_tcp_benchmark.cpp  faio_tcp_benmark.cpp
benchmark/tcp/tokio-benchmark/: Cargo.toml
benchmark/tcp/tokio-benchmark/src/: main.rs
docs/: http模块.md  一些问题.md  协程封装.md  协程并发接口.md  同步原语.md  定时器.md  异步IO.md  异步运行时.md  网络IO.md
examples/: CMakeLists.txt  coroutine_task.cpp  http_client.cpp  http_server.cpp  sync_demo.cpp  tcp_server.cpp  udp_server.cpp
include/faio/: faio.hpp  http.hpp
include/faio/detail/: io.hpp  net.hpp  sync.hpp  task.hpp  time.hpp
include/faio/detail/common/: concepts.hpp  error.hpp  static_math.hpp
include/faio/detail/common/util/: noncopyable.hpp  rand.hpp  singleton.hpp
include/faio/detail/coroutine/: task.hpp
include/faio/detail/http/: http_server.hpp  http_stream.hpp  types.hpp
include/faio/detail/http/v1/: client_session_v1.hpp  server_session_v1.hpp
include/faio/detail/http/v2/: client_session_v2.hpp  nghttp2_util.hpp  server_session_v2.hpp  session_callbacks.hpp
include/faio/detail/io/: io.hpp
include/faio/detail/io/awaiter/: accept.hpp  cancel.hpp  close.hpp  cmd_sock.hpp  connect.hpp  fsync.hpp  open.hpp  read.hpp  readv.hpp  recv.hpp  recvfrom.hpp  recvmsg.hpp  send.hpp  sendmsg.hpp  sendto.hpp  shutdown.hpp  socket.hpp  write.hpp  writev.hpp
include/faio/detail/io/base/: io_registrant.hpp
include/faio/detail/io/uring/: io_completion.hpp  io_uring.hpp  io_user_data.hpp  waker.hpp
include/faio/detail/net/common/: addr_util.hpp  address.hpp  datagram_recv.hpp  datagram_send.hpp  socket.hpp  sockopt.hpp  stream_read.hpp  stream_write.hpp
include/faio/detail/net/tcp/: base_listener.hpp  base_stream.hpp  tcp_listener.hpp  tcp_stream.hpp
include/faio/detail/net/udp/: base_datagram.hpp  datagram.hpp
include/faio/detail/runtime/: context.hpp
include/faio/detail/runtime/core/: config.hpp  io_engine.hpp  poller.hpp  queue.hpp  shared.hpp  state_machine.hpp  worker.hpp
include/faio/detail/runtime/core/timer/: task.hpp  timer.hpp  wheel.hpp
include/faio/detail/sync/: channel.hpp  condition_variable.hpp  mutex.hpp
include/faio/detail/sync/channel/: channel.hpp  receiver.hpp  ring_buffer.hpp  sender.hpp
include/faio/detail/time/: interval.hpp  sleep.hpp  time.hpp  timeout.hpp
scripts/: compare_http_benchmarks.py  compare_tcp_benchmarks.py
tests/: CMakeLists.txt  all_tests.cpp  test_http_router.cpp  test_runtime_task.cpp  test_sync_primitives.cpp  test_time_and_net.cpp
