cmake_minimum_required(VERSION 3.20)
project(faio)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(thirdparty)

# Optional: HTTP/2 (nghttp2) for faio::net::http
set(nghttp2_FOUND FALSE)
find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
  pkg_check_modules(nghttp2 QUIET libnghttp2)
endif()
if(NOT nghttp2_FOUND)
  find_package(nghttp2 QUIET)
endif()
if(NOT nghttp2_FOUND)
  find_library(nghttp2_LIBRARIES NAMES nghttp2)
  if(nghttp2_LIBRARIES)
    set(nghttp2_FOUND TRUE)
    set(nghttp2_INCLUDE_DIRS "/usr/include")
  endif()
endif()

add_subdirectory(examples)